--- a/OnlineTutor2/appsettings.json
+++ b/OnlineTutor2/appsettings.json
@@ -5,8 +5,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "OnlineTutor2": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MaxRequestBodySize": 10485760
 }
