--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/OnlineTutor2/wwwroot/uploads/materials/4cac66dc-d0ff-4880-8385-b878e792e87a_1 блок Безударные гласные в корне слова.doc
+/OnlineTutor2/wwwroot/uploads/materials/64e4fe67-b709-4dce-9a82-b055125793b4_2 блок Безударные гласные в корне слова.docx
