remove studentnottaken from analytics

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,5 @@ FodyWeavers.xsd
 /OnlineTutor2/wwwroot/uploads/materials/64e4fe67-b709-4dce-9a82-b055125793b4_2 блок Безударные гласные в корне слова.docx
 /OnlineTutor2/appsettings.Production.json
 /OnlineTutor2/.config/dotnet-tools.json
+/migration-script-fixed.sql
+/migration-script.sql
