--- a/OnlineTutor2/appsettings.json
+++ b/OnlineTutor2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SPINREDMI\\SQLEXPRESS;Initial Catalog=OnlineTutorDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=SPINREDMI\\SQLEXPRESS;Initial Catalog=OnlineTutor2;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
