--- a/OnlineTutor2/appsettings.json
+++ b/OnlineTutor2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=185.209.28.137,1433;User ID=Administrator;Password=Qt4%uB479991q:_FS=G3;Initial Catalog=OnlineTutor2;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=SPINREDMI\\SQLEXPRESS;Initial Catalog=OnlineTutor2;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
