--- a/OnlineTutor2/OnlineTutor2.csproj
+++ b/OnlineTutor2/OnlineTutor2.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\PunctuationTest\Index.cshtml" />
     <Content Remove="Views\SpellingTest\Analytics.cshtml" />
   </ItemGroup>
 
