refactor program.cs

--- a/OnlineTutor2/appsettings.Development.json
+++ b/OnlineTutor2/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SPINREDMI\\SQLEXPRESS;Initial Catalog=OnlineTutor2;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "OnlineTutor2": "Debug"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "MaxRequestBodySize": 10485760
 }
